@@ -16,6 +16,8 @@ for both A and B.
 Upgrading from v3.0.5
 ---------------------
 - TRepeater does not render <span> anymore for empty item template.
+- constructUrl() now encodes ampersand by default. This should have minimal
+  impact on any existing PRADO applications, though.
 
 Upgrading from v3.0.4
 ---------------------
